Fix style issues due to unfinished code splitting
Yeah, I have managed not to spot that I haven't changed scss
import from the original cvform.scss file to the new CVForm/cvform.scss
which made any changed to the files in the subdirectory invisible to the
browser. Yeah...

--- a/CVCreator/src/styles/includes/CVForm/cvform.scss
+++ b/CVCreator/src/styles/includes/CVForm/cvform.scss
@@ -3,19 +3,12 @@
 @import "./form-controls.scss";
 
 
-#cv-form {
-  width: 100%;
-  //min-width: 20rem;
-  display: flex;
-  flex-grow: 1;
-
-}
 
 #user-input-zone {
-  min-width: 15rem;
+  min-width: 25rem;
   max-width: 35rem;
-  flex-grow: 1;
   display: flex;
+  flex-grow: 1;
   justify-content: flex-start;
   flex-direction: column;
   align-items: stretch;
@@ -64,6 +57,10 @@
 #storage-buttons {
   display: flex;
   flex-direction: column;
+}
+
+#storage-buttons.closed-fieldset {
+  display: contents;
 }
 
 button {
@@ -130,9 +127,17 @@ button {
   }
 }
 
+label {
+  margin-top: 0.5rem;
+  display: flex;
+  min-width: 35%;
+  input {
+    flex-shrink: 1;
+  }
+}
 
-
-.closed-fieldset #storage-buttons {
+.closed-fieldset #storage-buttons,
+.closed-fieldset .management-buttons {
   display: none;
 }
 
@@ -145,11 +150,6 @@ button {
   h4 {
     text-align: center;
   }
-
-  .management-buttons {
-    flex-direction: row;
-  }
-
 }
 
 .management-buttons {
