--- a/CVCreator/src/styles/includes/CVForm/form-controls.scss
+++ b/CVCreator/src/styles/includes/CVForm/form-controls.scss
@@ -8,9 +8,6 @@ label {
   margin-top: 0.5rem;
   display: flex;
   min-width: 35%;
-  input {
-    flex-shrink: 1;
-  }
 }
 
 input {
@@ -18,7 +15,8 @@ input {
   border: none;
   border-bottom: 2px solid $lleuad;
   color: ghostwhite;
-  width: 65%;
+  flex: 0 1 65%;
+  
   &:invalid {
     border-color: red;
   }
@@ -59,3 +57,4 @@ select, option {
     background-color: $lleuad-lawn;
   }
 }
+
